# korean_polisher

./: .gitignore  README.md  app.py  demo.txt  example_awkfy.py  example_dataset.py  example_difference.py  example_predict.py  example_scheduler.py  example_train.py  history.txt  hparams.yaml  pyproject.toml  requirements.txt  run_crawl.py  run_server.py  server.py  test_case.txt  train command line.txt  train.py
awkfy/: README.md  awkfy.py  options.py
data_pipeline/: .gitignore  awkfy.py  crawl.py  dataset_utils.py  index.py  string_utils.py  test.py
data_pipeline/assets/: popular_nouns.txt  pronouns.txt  replace.txt
docs/: awkfy.rst  crawl.rst  dataset.rst  server.rst  train.rst  utils.rst
examples/: example_awkfy.py  example_dataset.py  example_difference.py  example_scheduler.py
extension/: manifest.json
kogpt2/: README.md  datamanger.py  dataset.py  kogpt2chat.py  kogpt_model.py  kogpt_predict_model.py  parse.py
korean_polisher/: run_crawl.py  run_server.py
korean_polisher/awkfy/: __init__.py  awkfy.py  awkfy_options.py  string_utils.py
korean_polisher/crawl/: __init__.py  crawl.py
korean_polisher/dataset/: __init__.py  dataset_utils.py
korean_polisher/examples/: example_awkfy.py  example_dataset.py  example_predict.py  (+2 more)
model/: awkfy.py  awkfy_options.py  crawl.py  crawl_utils.py  dataset_utils.py  difference.py  elmo.py  elmo_embedding.py  options.py  predict.py  scheduler.py  server.py  string_utils.py  test.py  train.py  transformer.py  visualization.py
model_chp/: README.md
tests/: test_korean_polisher.py
wordpiece/: README.md
(+28 files in other folders)
