[tool.poetry]
name = "korean_polisher"
version = "0.1.0"
description = ""
authors = ["sqrtpi177 <solar0037@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "2.3.1"
tokenizers = "^0.9.4"
konlpy = "^0.5.2"
hgtk = "^0.1.3"
joblib = "^0.17.0"
requests = "^2.25.0"
sanic = "^20.9.1"
Sanic-Cors = "^0.10.0"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
